@@ -33,7 +33,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/LinearLayout02"
+        android:id="@+id/llTresholds"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
 
