@@ -302,22 +302,21 @@ public class CpuHandler extends HardwareHandler {
 			if (success) {
 				Arrays.sort(freqs);
 				return freqs;
-			} else {
-				SortedSet<Integer> sortedSet = new TreeSet<Integer>();
-				sortedSet.add(getCpuInfoMinFreq());
-				sortedSet.add(getMinCpuFreq());
-				sortedSet.add(getCurCpuFreq());
-				sortedSet.add(getMaxCpuFreq());
-				sortedSet.add(getCpuInfoMaxFreq());
-				int[] res = new int[sortedSet.size()];
-				int i = 0;
-				for (int freq : sortedSet) {
-					res[i++] = freq;
-				}
-				// TODO save to settings?
-				Logger.w("No available frequencies found... generating from min/max");
-				return res;
 			}
+			SortedSet<Integer> sortedSet = new TreeSet<Integer>();
+			sortedSet.add(getCpuInfoMinFreq());
+			sortedSet.add(getMinCpuFreq());
+			sortedSet.add(getCurCpuFreq());
+			sortedSet.add(getMaxCpuFreq());
+			sortedSet.add(getCpuInfoMaxFreq());
+			int[] res = new int[sortedSet.size()];
+			int i = 0;
+			for (int freq : sortedSet) {
+				res[i++] = freq;
+			}
+			// TODO save to settings?
+			Logger.w("No available frequencies found... generating from min/max");
+			return res;
 
 		}
 		availCpuFreq = true;
